third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/translated_ir_tests/move/signer/move_to_mutable_signer.exp
module 0x8675309::M {
    struct R has key {
        f: bool,
    }
    fun t0(s: &mut signer) {
        move_to(R{f: false}, /*freeze*/s);
    }
}

module 0x8675309::N {
    struct R<T> has key {
        f: T,
    }
    fun t0(s: &mut signer) {
        move_to<bool>(R<bool>{f: false}, /*freeze*/s);
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: cannot use `R` with an operator which expects a value of type `&signer`
  ┌─ move_to_mutable_signer.move:6:17
  │
6 │         move_to(R{f: false}, /*freeze*/s);
  │                 ^^^^^^^^^^^

error: type `bool` is missing required ability `key`
   ┌─ move_to_mutable_signer.move:15:17
   │
15 │         move_to<bool>(R<bool>{f: false}, /*freeze*/s);
   │                 ^^^^
   │
   = required by instantiating type parameter `T:key` of function `move_to`

error: cannot use `R<bool>` with an operator which expects a value of type `&signer`
   ┌─ move_to_mutable_signer.move:15:23
   │
15 │         move_to<bool>(R<bool>{f: false}, /*freeze*/s);
   │                       ^^^^^^^^^^^^^^^^^
